[gd_scene load_steps=9 format=3 uid="uid://ba2ibp0utxvvy"]

[ext_resource type="FontFile" uid="uid://bky6yu22q3u5p" path="res://fonts/VortexDancerLaserItalic-6Rp5A.otf" id="1_6mhyf"]
[ext_resource type="Texture2D" uid="uid://ccblk7f0dgg6s" path="res://Sprites/pongBG.png" id="1_kbl72"]
[ext_resource type="Script" uid="uid://crxoal5iqihkb" path="res://Scripts/winner_label.gd" id="2_h3fnl"]
[ext_resource type="AudioStream" uid="uid://cvfwseeax5l0i" path="res://Sounds/Gamov_sfx_pong.ogg" id="3_h3fnl"]
[ext_resource type="Script" uid="uid://c40uga035nab7" path="res://Scripts/play_again.gd" id="3_kbl72"]
[ext_resource type="Script" uid="uid://bbfoj2frs6w8q" path="res://Scripts/quit.gd" id="4_fkpik"]
[ext_resource type="PackedScene" uid="uid://c7fxawhe1yxte" path="res://Scenes/score_ui(h_box).tscn" id="5_tss2i"]

[sub_resource type="LabelSettings" id="LabelSettings_gdxnu"]
font = ExtResource("1_6mhyf")
font_size = 90
font_color = Color(0.0470588, 0.647059, 0.854902, 1)
outline_size = 15

[node name="endGame" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kbl72")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="Winner Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "WINNER!"
label_settings = SubResource("LabelSettings_gdxnu")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_h3fnl")

[node name="gamov_sfx" type="AudioStreamPlayer" parent="VBoxContainer/Winner Label"]
stream = ExtResource("3_h3fnl")

[node name="button" type="AudioStreamPlayer" parent="VBoxContainer/Winner Label"]

[node name="PlayAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_6mhyf")
theme_override_font_sizes/font_size = 50
text = "Play Again"
script = ExtResource("3_kbl72")

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_6mhyf")
theme_override_font_sizes/font_size = 50
text = "Quit"
script = ExtResource("4_fkpik")

[node name="ScoreUi(HBox)" parent="VBoxContainer" instance=ExtResource("5_tss2i")]
layout_mode = 2

[connection signal="mouse_entered" from="VBoxContainer/PlayAgain" to="VBoxContainer/Winner Label" method="_on_play_again_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="VBoxContainer/Winner Label" method="_on_quit_mouse_entered"]
